<resources>
    <string name="app_name">TransactionManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="correo_o_contrase_a_incorrectos">Correo o contraseña incorrectos.</string>
    <string name="email_address">Email Address</string>
    <string name="username_gmail_com">Username@gmail.com</string>
    <string name="password">Password</string>
    <string name="hidden_password">••••••••</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>
